--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,13 +5,25 @@ events {
 }
 
 http {
+    include /etc/nginx/mime.types; 
+    default_type application/octet-stream;
     upstream orderflow {
         server orderflow:8000;
     }
 
     server {
         listen 80;
+
+        location /static/ {
+        alias /home/app/staticfiles/;
+        autoindex off; 
+        expires 1y; 
+        access_log off; 
+        add_header Cache-Control "public";
+        }
+
         
+
         location / {
             proxy_pass http://orderflow;
             proxy_set_header Host $host;
@@ -21,8 +33,5 @@ http {
             proxy_set_header Connection "";
             proxy_http_version 1.1;
         }
-        location /static/ {
-        alias /home/app/staticfiles/;
-    }
     }
 }
